--- a/PatientInfoModule/Views/Info/InfoHeaderView.xaml
+++ b/PatientInfoModule/Views/Info/InfoHeaderView.xaml
@@ -1,4 +1,4 @@
-﻿<fluent:RibbonTabItem x:Class="PatientInfoModule.Views.InfoHeader"
+﻿<fluent:RibbonTabItem x:Class="PatientInfoModule.Views.InfoHeaderView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
