--- a/PatientRecordsModule/Views/VisitEditor.xaml
+++ b/PatientRecordsModule/Views/VisitEditor.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.NewVisitCreating"
+﻿<UserControl x:Class="PatientRecordsModule.Views.VisitEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -36,42 +36,42 @@
             <DatePicker Grid.Row="0" Grid.Column="1" SelectedDate="{Binding Date}" SelectedDateFormat="Long" FirstDayOfWeek="Monday" HorizontalAlignment="Left"/>
 
             <TextBlock Grid.Row="1" Grid.Column="0" Text="Шаблон случая:"/>
-            <ComboBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding VisitTemplates}" 
+            <ComboBox Grid.Row="1" Grid.Column="1"  Margin="3,1,20,1" ItemsSource="{Binding VisitTemplates}" 
                       SelectedValue="{Binding SelectedVisitTemplateId, ValidatesOnDataErrors=True}" 
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
                       SelectedValuePath="Id" DisplayMemberPath="Name"/>
 
             <TextBlock Grid.Row="2" Grid.Column="0" Text="Место выполнения:"/>
-            <ComboBox Grid.Row="2" Grid.Column="1"  ItemsSource="{Binding ExecutionPlaces}" 
+            <ComboBox Grid.Row="2" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding ExecutionPlaces}" 
                       SelectedValue="{Binding SelectedExecutionPlaceId, ValidatesOnDataErrors=True}" 
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       SelectedValuePath="Id" DisplayMemberPath="Name" IsEnabled="{Binding ExecutionPlaceEnabled}"/>
-            
+
             <TextBlock Grid.Row="3" Grid.Column="0" Text="Договор:"/>
-            <ComboBox Grid.Row="3" Grid.Column="1"  ItemsSource="{Binding Contracts}" SelectedValue="{Binding SelectedContractId, ValidatesOnDataErrors=True}"
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" SelectedValuePath="Id" DisplayMemberPath="Name" 
+            <ComboBox Grid.Row="3" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding Contracts}" SelectedValue="{Binding SelectedContractId, ValidatesOnDataErrors=True}"
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" SelectedValuePath="Id" DisplayMemberPath="Name" 
                       IsEnabled="{Binding ContractEnabled}"/>
 
             <TextBlock Grid.Row="4" Grid.Column="0" Text="Источник финансирования:"/>
-            <ComboBox Grid.Row="4" Grid.Column="1"  ItemsSource="{Binding FinancingSources}" 
+            <ComboBox Grid.Row="4" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding FinancingSources}" 
                       SelectedValue="{Binding SelectedFinancingSourceId, ValidatesOnDataErrors=True}" 
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       SelectedValuePath="Id" DisplayMemberPath="Name" IsEnabled="{Binding FinancingSourceEnabled}"/>
 
             <TextBlock Grid.Row="5" Grid.Column="0" Text="Срочность:"/>
-            <ComboBox Grid.Row="5" Grid.Column="1"  ItemsSource="{Binding Urgentlies}" SelectedValue="{Binding SelectedUrgentlyId, ValidatesOnDataErrors=True}" 
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" SelectedValuePath="Id" DisplayMemberPath="Name" 
+            <ComboBox Grid.Row="5" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding Urgentlies}" SelectedValue="{Binding SelectedUrgentlyId, ValidatesOnDataErrors=True}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" SelectedValuePath="Id" DisplayMemberPath="Name" 
                       IsEnabled="{Binding UrgentlyEnabled}"/>
 
             <TextBlock Grid.Row="6" Grid.Column="0" Text="Направившее ЛПУ:"/>
-            <ComboBox Grid.Row="6" Grid.Column="1"  ItemsSource="{Binding LPUs}" SelectedValue="{Binding SelectedLPUId, ValidatesOnDataErrors=True}" 
-                      Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" SelectedValuePath="Id" DisplayMemberPath="Name"/>
+            <ComboBox Grid.Row="6" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding LPUs}" SelectedValue="{Binding SelectedLPUId, ValidatesOnDataErrors=True}" 
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" SelectedValuePath="Id" DisplayMemberPath="Name"/>
 
             <TextBlock Grid.Row="7" Grid.Column="0" Text="Примечание:"/>
             <TextBox Grid.Row="7" Grid.Column="1" Height="48" Text="{Binding Note}" TextWrapping="Wrap"/>
 
             <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="Создать" Margin="3" Command="{Binding CreateVisitCommand}"/>
+                <Button Content="Сохранить" Margin="3" Command="{Binding CreateVisitCommand}"/>
                 <Button Content="Отмена" Margin="3" Command="{Binding CancelCommand}"/>
             </StackPanel>
         </Grid>
