- Added 'view' postfix to all views
- Further working with identity documents

--- a/OrganizationContracts/Views/OrgContractsHeaderView.xaml
+++ b/OrganizationContracts/Views/OrgContractsHeaderView.xaml
@@ -1,4 +1,4 @@
-﻿<fluent:RibbonTabItem x:Class="OrganizationContractsModule.Views.OrgContractsHeader"
+﻿<fluent:RibbonTabItem x:Class="OrganizationContractsModule.Views.OrgContractsHeaderView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
