--- a/OrganizationContracts/Views/AddContractOrganizationView.xaml
+++ b/OrganizationContracts/Views/AddContractOrganizationView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="OrganizationContractsModule.Views.AddContractOrganization"
+﻿<UserControl x:Class="OrganizationContractsModule.Views.AddContractOrganizationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
