--- a/PatientInfoModule/Views/Info/InfoContentView.xaml
+++ b/PatientInfoModule/Views/Info/InfoContentView.xaml
@@ -306,7 +306,8 @@
                          Grid.Column="0"
                          IsReadOnly="True"
                          VerticalAlignment="Stretch"
-                         Text="{Binding IdentityDocuments.StringRepresentation, Mode=OneWay}">
+                         Text="{Binding IdentityDocuments.StringRepresentation, Mode=OneWay, ValidatesOnDataErrors=True}"
+                         Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="GotKeyboardFocus">
                             <i:InvokeCommandAction Command="{Binding ActivateChildContentCommand, Mode=OneTime}"
