--- a/PatientInfoModule/Views/PersonDocumentsView.xaml
+++ b/PatientInfoModule/Views/PersonDocumentsView.xaml
@@ -1,15 +1,13 @@
-﻿<UserControl x:Class="PatientInfoModule.Views.PersonDocuments"
+﻿<UserControl x:Class="PatientInfoModule.Views.PersonDocumentsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
              xmlns:views="clr-namespace:PatientInfoModule.Views"
-             xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:prism="http://www.codeplex.com/prism"
              xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
-             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="600"
              d:DataContext="{d:DesignInstance viewModels:PersonDocumentsViewModel}">
