--- a/PatientRecordsModule/Views/PersonRecordsView.xaml
+++ b/PatientRecordsModule/Views/PersonRecordsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.PersonRecords"
+﻿<UserControl x:Class="PatientRecordsModule.Views.PersonRecordsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
